# GalaFreeport

./: PRODUCT.md  README.md  pyproject.toml
.github/workflows/: daily_crawl.yml
data/snapshots/: 2026-07-23.manifest.json  2026-07-24.manifest.json
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  METHODOLOGY.html  METHODOLOGY.md  catalog.html  daily-report.html  index.html  price-changes.html  weekly-report.html
docs/assets/: catalog.js  price-changes.js
docs/data/: daily-summary.json  weekly-summary.json
docs/data/catalog-history/: 00.json  01.json  02.json  03.json  04.json  05.json  06.json  07.json  08.json  09.json  0a.json  0b.json  0c.json  0d.json  0e.json  0f.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  1a.json  1b.json  1c.json  1d.json  1e.json  1f.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  (+217 more)
docs/data/price-changes/: 2026-07-24.json  index.json
gala_freeport/: __init__.py  __main__.py  analysis.py  browser_source.py  catalog_history.py  catalog_page.py  discovery.py  models.py  parsers.py  pipeline.py  price_changes_page.py  report.py  storage.py  validation.py
scripts/: check.py  workflow_summary.py
tests/: test_analysis_report.py  test_browser_source.py  test_parsers_discovery.py  test_scripts.py  test_storage_validation.py
tests/fixtures/: category_tree.json  footer.json  products_multi_1.json  products_multi_2.json  products_single.json  products_variety.json  store_identity.json
